--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <script src="libs/p5.js"></script>
+  <script src="libs/p5.dom.min.js"></script>
+  <script src="libs/p5.sound.min.js"></script>
+ <!-- <script scr = https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js><script>
+  <script scr = https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js><script>
+  -->
   <title>HTML</title>
-  
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+ 
 </head>
 
 <body>
-  <p>Nothing to see here...</p>
-  <!-- Project -->
   <script src="main.js"></script>
+  <script src="JoyStick.js"></script>
+  <script src="Spark.js"></script>
+  <script src="Jet.js"></script>
+  <script src="Enemy.js"></script>
+  <script src="Bullet.js"></script>
+  <script src="Dasboard.js"></script>
 </body>
 </html>
